public class BeatObserver {
}
