/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

/**
 *
 * @author maria
 */

public class DJTestDrive {

    public static void main (String[] args) {
        BeatModel model = new BeatModel();
		ControllerInterface controller = BeatController.getInstance(model);
    }
}
