@startuml

title __BEATAPPLICATION's Class Diagram__\n

  package  {
    interface BPMObserver {
    }
  }
  

  package  {
    class BeatBar {
    }
  }
  

  package  {
    class BeatController {
    }
  }
  

  package  {
    class BeatModel {
    }
  }
  

  package  {
    interface BeatModelInterface {
    }
  }
  

  package  {
    interface BeatObserver {
    }
  }
  

  package  {
    interface ControllerInterface {
    }
  }
  

  package  {
    class DJTestDrive {
    }
  }
  

  package  {
    class DJView {
    }
  }
  

  BeatBar -up-|> Runnable
  BeatBar -up-|> JProgressBar
  BeatController -up-|> ControllerInterface
  BeatController o-- BeatModelInterface : model
  BeatController o-- DJView : view
  BeatModel -up-|> BeatModelInterface
  BeatModel -up-|> MetaEventListener
  DJView -up-|> ActionListener
  DJView -up-|> BeatObserver
  DJView -up-|> BPMObserver
  DJView o-- BeatModelInterface : model
  DJView o-- ControllerInterface : controller
  DJView o-- BeatBar : beatBar


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
